# kinguin-client

./: README.md  pyproject.toml
kinguin_client/: __init__.py  kinguin.py
kinguin_client/clients/: balance_client.py  base_client.py  order_client.py  products_client.py
tests/: test_kinguin_client.py  test_products_client.py
