[tool.poetry]
name = "kinguin-client"
version = "0.2.0"
description = "Python API wrapper for Kinguin"
authors = ["rr00bbiinn <robin@itlandslaget.se>"]
readme = 'README.md'
keywords = ['api', 'kinguin']
repository = 'https://github.com/rr00bbiinn/kinguin-client'

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
